grammars/tree-sitter-svg/grammar.js
		source_file: $ =>
			seq(
				// XML 1.0 §2.8 requires xml_declaration to be absolute first,
				// but real-world SVGs (incl. W3C reference samples) often
				// have a leading newline/BOM/whitespace; be lenient here.
				// Leading misc only permitted when an xml_declaration follows,
				// to keep source_file_repeat1 unambiguous.
				optional(seq(repeat($._misc), $.xml_declaration)),
				repeat($._misc),
				optional(seq($.doctype, repeat($._misc))),
				field('root', $.svg_root_element),
				repeat($._misc),
			),

		_misc: $ =>
			choice(
				$.processing_instruction,
				$.comment,
				alias($.misc_text, $.text),
			),

		xml_declaration: $ =>
			seq(
				// Start token consumes `<?xml` + mandatory whitespace. The
				// trailing ws disambiguates from PI targets that begin with
				// `xml` (e.g. `<?xml-stylesheet`), which XML 1.0 §2.8 and the
				// pi_target_name regex reserve as valid PIs.
				$._xml_declaration_start,
				$.xml_version_attribute,
				optional(seq($._s, $.xml_encoding_attribute)),
				optional(seq($._s, $.xml_standalone_attribute)),
				optional($._s),
				'?>',
			),

		_xml_declaration_start: _ => token(prec(2, /<\?xml[ \t\r\n]+/)),

		xml_version_attribute: $ =>
			seq(
				field('name', $.xml_version_attribute_name),
				$._eq,
				field('value', $.quoted_attribute_value),
			),

		xml_version_attribute_name: _ => 'version',

		xml_standalone_attribute: $ =>
			seq(
				field('name', $.xml_standalone_attribute_name),
				$._eq,
				field('value', $.xml_standalone_attribute_value),
			),

		xml_standalone_attribute_name: _ => 'standalone',
		xml_standalone_attribute_value: _ => token(choice('"yes"', '"no"', "'yes'", "'no'")),

		doctype: $ =>
			seq(
				'<!DOCTYPE',
				$._s,
				field('name', $.name),
				optional(seq($._s, field('external_id', $.doctype_external_id))),
				optional(seq($._s, field('internal_subset', $.doctype_internal_subset))),
				optional($._s),
				'>',
			),

		doctype_external_id: _ => token(/[^\x5B\x5D>]+/),

		processing_instruction: $ =>
			seq(
				'<?',
				field('target', alias($.pi_target_name, $.name)),
				optional(seq($._s, field('content', $.pi_content))),
				'?>',
			),

		pi_content: _ => token(/([^?]|\?[^>])+/),

		comment: $ =>
			seq(
				'<!--',
				optional(field('text', $.comment_text)),
				'-->',
			),

		comment_text: _ =>
			repeat1(choice(
				token.immediate(/[^-]+/),
				token.immediate(/-[^-]/),
			)),

		cdata_section: $ =>
			seq(
				'<![CDATA[',
				optional($.cdata_text),
				']]>',
			),

		cdata_text: $ => repeat1($._cdata_text),

		// ─── SVG Root Element ───────────────────────────────────────

		svg_root_element: $ =>
			choice(
				$.self_closing_tag,
				seq(
					$.start_tag,
					repeat($._content),
					choice($.end_tag, $.erroneous_end_tag),
				),
			),

		// ─── Generic Element ────────────────────────────────────────

		element: $ =>
			choice(
				$._script_element,
				$._style_element,
				$._path_element,
				$.self_closing_tag,
				seq($.start_tag, repeat($._content), choice($.end_tag, $.erroneous_end_tag)),
			),

		_content: $ =>
			choice(
				$.element,
				$._text_like_content,
			),

		_script_element: $ =>
			choice(
				alias($.script_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.script_start_tag, $.start_tag),
					optional($._raw_or_cdata_text),
					choice(alias($.script_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_style_element: $ =>
			choice(
				alias($.style_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.style_element_start_tag, $.start_tag),
					optional($._raw_or_cdata_text),
					choice(alias($.style_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_path_element: $ =>
			choice(
				alias($.path_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.path_start_tag, $.start_tag),
					repeat($._content),
					choice(alias($.path_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		start_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'>',
			),

		end_tag: $ =>
			seq(
				'</',
				field('name', alias($._end_tag_name, $.name)),
				optional($._s),
				'>',
			),

		self_closing_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'/>',
			),

		erroneous_end_tag: $ =>
			seq(
				'</',
				field('name', alias($._erroneous_end_tag_name, $.name)),
				optional($._s),
				'>',
			),

		// ─── Attributes ─────────────────────────────────────────────

		// Supertype over every concrete attribute bucket. The members are a
		// flat choice of single named symbols (28 typed + generic) so the
		// tree-sitter supertype validator accepts it; the former hidden
		// `_typed_attribute` intermediate produced zero CST nodes, so
		// flattening it here is tree-identical.
		d_attribute: $ =>
			seq(
				field('name', $.d_attribute_name),
				$._eq,
				field('value', $.d_attribute_value),
			),

		d_attribute_name: _ => oneOf(D_ATTRIBUTE_NAMES),

		d_attribute_value: $ =>
			choice(
				$.double_quoted_path_data,
				$.single_quoted_path_data,
			),

		double_quoted_path_data: $ =>
			seq(
				'"',
				optional($.path_data_content),
				'"',
			),

		path_wsp: _ => token(prec(1, /[ \t\r\n]+/)),

		// ─── style attribute (CSS injection) ────────────────────────

		style_attribute: $ =>
			seq(
				field('name', $.style_attribute_name),
				$._eq,
				field('value', $.style_attribute_value),
			),

		style_attribute_name: _ => 'style',

		style_attribute_value: $ =>
			choice(
				$.double_quoted_style_value,
				$.single_quoted_style_value,
			),

		double_quoted_style_value: $ =>
			seq(
				'"',
				optional(field('content', $.style_text_double)),
				'"',
			),

		style_text_double: _ => token(/[^"]+/),
		viewbox_attribute: $ =>
			seq(
				field('name', $.viewbox_attribute_name),
				$._eq,
				field('value', $.viewbox_attribute_value),
			),

		viewbox_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.view_box),

		viewbox_attribute_value: $ => quoted($.viewbox_value),

		viewbox_value: $ =>
			seq(
				$.number,
				$.comma_wsp,
				$.number,
				$.comma_wsp,
				$.number,
				$.comma_wsp,
				$.number,
			),

		// ─── preserveAspectRatio attribute ──────────────────────────

		preserve_aspect_ratio_attribute: $ =>
			seq(
				field('name', $.preserve_aspect_ratio_attribute_name),
				$._eq,
				field('value', $.preserve_aspect_ratio_attribute_value),
			),

		preserve_aspect_ratio_attribute_name: _ => 'preserveAspectRatio',

		preserve_aspect_ratio_attribute_value: $ => quoted($.preserve_aspect_ratio_value),

		preserve_aspect_ratio_value: $ =>
			seq(
				optional(seq('defer', $.wsp)),
				$.align_keyword,
				optional(seq($.wsp, $.meet_or_slice_keyword)),
			),

		align_keyword: _ =>
			token(choice(
				'none',
				'xMinYMin',
				'xMidYMin',
				'xMaxYMin',
				'xMinYMid',
				'xMidYMid',
				'xMaxYMid',
				'xMinYMax',
				'xMidYMax',
				'xMaxYMax',
			)),

		meet_or_slice_keyword: _ => token(choice('meet', 'slice')),

		// ─── transform attribute ────────────────────────────────────

		transform_attribute: $ =>
			seq(
				field('name', $.transform_attribute_name),
				$._eq,
				field('value', $.transform_attribute_value),
			),

		transform_attribute_name: _ =>
			token(choice(
				'transform',
				'gradientTransform',
				'patternTransform',
			)),

		transform_attribute_value: $ => quoted($.transform_list),

		transform_list: $ =>
			seq(
				$.transform_function,
				repeat(seq($.comma_wsp, $.transform_function)),
			),

		translate_transform: $ =>
			seq(
				'translate',
				'(',
				optional($.wsp),
				$.number,
				optional(seq($.comma_wsp, $.number)),
				optional($.wsp),
				')',
			),

		scale_transform: $ =>
			seq(
				'scale',
				'(',
				optional($.wsp),
				$.number,
				optional(seq($.comma_wsp, $.number)),
				optional($.wsp),
				')',
			),

		rotate_transform: $ =>
			seq(
				'rotate',
				'(',
				optional($.wsp),
				$.number,
				optional(seq($.comma_wsp, $.number, $.comma_wsp, $.number)),
				optional($.wsp),
				')',
			),

		points_attribute: $ =>
			seq(
				field('name', $.points_attribute_name),
				$._eq,
				field('value', $.points_attribute_value),
			),

		points_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.coordinate_pair_list),

		points_attribute_value: $ => quoted($.coordinate_pair_list),

		coordinate_pair_list: $ =>
			seq(
				$.coordinate_pair,
				repeat(seq($.comma_wsp, $.coordinate_pair)),
			),

		coordinate_pair: $ => seq($.number, optional($.comma_wsp), $.number),

		// ─── paint attribute (fill, stroke, color, etc.) ────────────

		paint_attribute: $ =>
			seq(
				field('name', $.paint_attribute_name),
				$._eq,
				field('value', $.paint_attribute_value),
			),

		paint_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.color),

		paint_attribute_value: $ => quoted($.paint_value),

		paint_value: $ =>
			choice(
				'none',
				'currentColor',
				'context-fill',
				'context-stroke',
				'inherit',
				$.paint_server,
				$.color_value,
			),

		paint_server: $ =>
			seq(
				'url(',
				optional($.wsp),
				$.iri_reference,
				optional($.wsp),
				')',
				optional(seq($.wsp, choice($.color_value, 'none', 'currentColor'))),
			),

		hex_color: _ => token(/#(?:[0-9A-Fa-f]{3}|[0-9A-Fa-f]{4}|[0-9A-Fa-f]{6}|[0-9A-Fa-f]{8})/),
		functional_color: $ =>
			choice(
				$._rgb_color,
				$._hsl_color,
				$._hwb_color,
				$._lab_color,
				$._lch_color,
				$._oklab_color,
				$._oklch_color,
				$._color_function,
				$._color_mix_function,
			),

		// rgb() / rgba() — 3 components + optional /alpha
		_rgb_color: $ =>
			seq(
				alias(token(choice('rgb', 'rgba')), $.color_function_name),
				'(',
				optional($.wsp),
				$.number_or_percentage,
				$.comma_wsp,
				$.number_or_percentage,
				$.comma_wsp,
				$.number_or_percentage,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// hsl() / hsla() — hue + 2 percentages + optional /alpha
		_hsl_color: $ =>
			seq(
				alias(token(choice('hsl', 'hsla')), $.color_function_name),
				'(',
				optional($.wsp),
				$.hue_value,
				$.comma_wsp,
				$.number_or_percentage,
				$.comma_wsp,
				$.number_or_percentage,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// hwb() — hue + 2 components + optional /alpha (CSS Color 4)
		_hwb_color: $ =>
			seq(
				alias(token('hwb'), $.color_function_name),
				'(',
				optional($.wsp),
				$._color_hue_component,
				$.comma_wsp,
				$._color_component,
				$.comma_wsp,
				$._color_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// lab() — L a b + optional /alpha (CSS Color 4)
		_lab_color: $ =>
			seq(
				alias(token('lab'), $.color_function_name),
				'(',
				optional($.wsp),
				$._color_component,
				$.comma_wsp,
				$._color_component,
				$.comma_wsp,
				$._color_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// oklab() — L a b + optional /alpha (CSS Color 4)
		_oklab_color: $ =>
			seq(
				alias(token('oklab'), $.color_function_name),
				'(',
				optional($.wsp),
				$._color_component,
				$.comma_wsp,
				$._color_component,
				$.comma_wsp,
				$._color_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// lch() — L C H + optional /alpha (CSS Color 4)
		_lch_color: $ =>
			seq(
				alias(token('lch'), $.color_function_name),
				'(',
				optional($.wsp),
				$._color_component,
				$.comma_wsp,
				$._color_component,
				$.comma_wsp,
				$._color_hue_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// oklch() — L C H + optional /alpha (CSS Color 4)
		_oklch_color: $ =>
			seq(
				alias(token('oklch'), $.color_function_name),
				'(',
				optional($.wsp),
				$._color_component,
				$.comma_wsp,
				$._color_component,
				$.comma_wsp,
				$._color_hue_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// color(<colorspace> c1 c2 c3 [/alpha]?) — CSS Color 4
		_color_function: $ =>
			seq(
				alias(token('color'), $.color_function_name),
				'(',
				optional($.wsp),
				$.color_colorspace,
				$.wsp,
				$._color_component,
				$.wsp,
				$._color_component,
				$.wsp,
				$._color_component,
				optional($._color_alpha),
				optional($.wsp),
				')',
			),

		// color-mix(in <cs> [hue-method]?, <color> [pct]?, <color> [pct]?) — CSS Color 5
		_color_mix_function: $ =>
			seq(
				alias(token('color-mix'), $.color_function_name),
				'(',
				optional($.wsp),
				$.color_interpolation_method,
				$.comma_wsp,
				$.color_mix_component,
				$.comma_wsp,
				$.color_mix_component,
				optional($.wsp),
				')',
			),

		hue_value: $ => seq($.number, optional($.angle_unit)),

		named_color: _ => token(/[A-Za-z][A-Za-z-]*/),

		// ─── functional IRI attribute (url(#ref)) ───────────────────

		functional_iri_attribute: $ =>
			seq(
				field('name', $.functional_iri_attribute_name),
				$._eq,
				field('value', $.functional_iri_attribute_value),
			),

		functional_iri_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.functional_iri),

		functional_iri_attribute_value: $ => quoted(choice('none', $.functional_iri, $.iri_reference)),

		functional_iri: $ => seq('url(', optional($.wsp), $.iri_reference, optional($.wsp), ')'),

		// ─── clip attribute (deprecated, rect() function) ───────────

		opacity_attribute: $ =>
			seq(
				field('name', $.opacity_attribute_name),
				$._eq,
				field('value', $.opacity_attribute_value),
			),

		opacity_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.number_or_percentage),

		opacity_attribute_value: $ => quoted($.number_or_percentage),

		// ─── length attribute (x, y, width, height, etc.) ───────────

		length_attribute: $ =>
			seq(
				field('name', $.length_attribute_name),
				$._eq,
				field('value', $.length_attribute_value),
			),

		length_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.length),

		// The `length` bucket holds attributes whose value space is a length or
		// percentage, but many spec grammars are a union with keyword alternatives
		// or keyword/length combinations: `baseline-shift` (`sub | super |
		// <length-percentage>`), `letter-spacing`/`word-spacing` (`normal |
		// <length>`), `font-size-adjust` (`none | <number>`), `refX`/`refY`
		// (`<length> | left | center | …`), and `transform-origin`
		// (`[ left | center | … | <length-percentage> ]…`). The plain
		// length/percentage/auto value keeps its existing shape; a keyword-bearing
		// value (one or more whitespace-separated keywords, optionally mixed with
		// lengths) is the alternative. A genuine pure-length attribute (`x`,
		// `width`) never carries a keyword in valid SVG, so this superset is
		// lossless and keeps the value typed.
		length_attribute_value: $ => quoted(choice($.length_or_percentage_or_auto, $.length_keyword_value)),

		// Distinct from the plain length/percentage/auto branch: this fires only
		// when a keyword participates, so a bare single length never matches both
		// branches. Either it leads with a keyword, or it leads with a length that
		// is followed by at least one more whitespace-separated item.
		css_text_attribute: $ =>
			seq(
				field('name', $.css_text_attribute_name),
				$._eq,
				field('value', $.css_text_attribute_value),
			),

		css_text_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.css_text),

		css_text_attribute_value: $ =>
			choice(
				seq('"', optional(field('content', $.css_attribute_text_double)), '"'),
				seq("'", optional(field('content', $.css_attribute_text_single)), "'"),
			),

		css_attribute_text_double: _ => token(/[^"]+/),
		href_attribute: $ =>
			seq(
				field('name', $.href_attribute_name),
				$._eq,
				field('value', $.href_attribute_value),
			),

		href_attribute_name: _ => token(choice('href', 'xlink:href')),

		href_attribute_value: $ => quoted($.href_reference),

		id_attribute_name: _ => 'id',
