grammars/tree-sitter-svg/test/corpus/edge_cases.txt
==================
Single-quoted typed attribute values
==================

<svg viewBox='0 0 50 50' preserveAspectRatio='xMidYMid meet'>
  <rect x='10' y='20' width='30' height='40'/>
  <circle fill='red' stroke='blue' opacity='.5'/>
  <use href='#a' clip-path='url(#c)'/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (viewbox_attribute
        name: (viewbox_attribute_name)
        value: (viewbox_attribute_value
          (viewbox_value
            (number)
            (comma_wsp
              (wsp))
            (number)
            (comma_wsp
              (wsp))
            (number)
            (comma_wsp
              (wsp))
            (number))))
      (preserve_aspect_ratio_attribute
        name: (preserve_aspect_ratio_attribute_name)
        value: (preserve_aspect_ratio_attribute_value
          (preserve_aspect_ratio_value
            (align_keyword)
            (wsp)
            (meet_or_slice_keyword)))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (paint_attribute
          name: (paint_attribute_name)
          value: (paint_attribute_value
            (paint_value
              (named_color))))
        (paint_attribute
          name: (paint_attribute_name)
          value: (paint_attribute_value
            (paint_value
              (named_color))))
        (opacity_attribute
          name: (opacity_attribute_name)
          value: (opacity_attribute_value
            (number_or_percentage
              (number))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (href_attribute
          name: (href_attribute_name)
          value: (href_attribute_value
            (href_reference
              (iri_reference))))
        (functional_iri_attribute
          name: (functional_iri_attribute_name)
          value: (functional_iri_attribute_value
            (functional_iri
              (iri_reference))))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Empty typed attribute values
==================

<svg viewBox="">
  <path d=""/>
  <rect style="" fill="" opacity="" class=""/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (viewbox_attribute
        name: (viewbox_attribute_name)
        value: (viewbox_attribute_value)))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (d_attribute
          name: (d_attribute_name)
          value: (d_attribute_value
            (double_quoted_path_data)))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (style_attribute
          name: (style_attribute_name)
          value: (style_attribute_value
            (double_quoted_style_value)))
        (paint_attribute
          name: (paint_attribute_name)
          value: (paint_attribute_value))
        (opacity_attribute
          name: (opacity_attribute_name)
          value: (opacity_attribute_value))
        (class_attribute
          name: (class_attribute_name)
          value: (class_attribute_value))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Length attribute auto keyword
==================

<svg width="auto" height="auto">
  <rect width="auto"/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (length_attribute
        name: (length_attribute_name)
        value: (length_attribute_value
          (length_or_percentage_or_auto)))
      (length_attribute
        name: (length_attribute_name)
        value: (length_attribute_value
          (length_or_percentage_or_auto))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto)))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Length units variety
==================

<svg>
  <rect x="10px" y="2em" width="3ex" height="72pt"/>
  <circle cx="5pc" cy="10mm" r="2cm"/>
  <text x="1in" font-size="16px"/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number)
                  (length_unit))))))
        (css_text_attribute
          name: (css_text_attribute_name)
          value: (css_text_attribute_value
            content: (css_attribute_text_double)))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Negative numbers in viewBox and coordinates
==================

<svg viewBox="-50 -50 200 200">
  <rect x="-10" y="-20" width="30" height="40"/>
  <circle cx="-5.5" cy="-3.14" r="10"/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (viewbox_attribute
        name: (viewbox_attribute_name)
        value: (viewbox_attribute_value
          (viewbox_value
            (number)
            (comma_wsp
              (wsp))
            (number)
            (comma_wsp
              (wsp))
            (number)
            (comma_wsp
              (wsp))
            (number)))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))
        (length_attribute
          name: (length_attribute_name)
          value: (length_attribute_value
            (length_or_percentage_or_auto
              (length_or_percentage
                (length
                  (number))))))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
ViewBox comma-separated
==================

<svg viewBox="0,0,100,200"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (viewbox_attribute
        name: (viewbox_attribute_name)
        value: (viewbox_attribute_value
          (viewbox_value
            (number)
            (comma_wsp)
            (number)
            (comma_wsp)
            (number)
            (comma_wsp)
            (number)))))
    (end_tag
      name: (name)))
  (text))

==================
ViewBox mixed separators
==================

<svg viewBox="0 0,100 200"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (viewbox_attribute
        name: (viewbox_attribute_name)
        value: (viewbox_attribute_value
          (viewbox_value
            (number)
            (comma_wsp
              (wsp))
            (number)
            (comma_wsp)
            (number)
            (comma_wsp
              (wsp))
            (number)))))
    (end_tag
      name: (name)))
  (text))

==================
PreserveAspectRatio none
==================

<svg preserveAspectRatio="none"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (preserve_aspect_ratio_attribute
        name: (preserve_aspect_ratio_attribute_name)
        value: (preserve_aspect_ratio_attribute_value
          (preserve_aspect_ratio_value
            (align_keyword)))))
    (end_tag
      name: (name)))
  (text))

==================
PreserveAspectRatio all alignment values
==================

<svg>
  <image preserveAspectRatio="xMinYMin"/>
  <image preserveAspectRatio="xMidYMin"/>
  <image preserveAspectRatio="xMaxYMin"/>
  <image preserveAspectRatio="xMinYMid"/>
  <image preserveAspectRatio="xMidYMid"/>
  <image preserveAspectRatio="xMaxYMid"/>
  <image preserveAspectRatio="xMinYMax"/>
  <image preserveAspectRatio="xMidYMax"/>
  <image preserveAspectRatio="xMaxYMax meet"/>
  <image preserveAspectRatio="xMinYMin slice"/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword)
              (wsp)
              (meet_or_slice_keyword))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (preserve_aspect_ratio_attribute
          name: (preserve_aspect_ratio_attribute_name)
          value: (preserve_aspect_ratio_attribute_value
            (preserve_aspect_ratio_value
              (align_keyword)
              (wsp)
              (meet_or_slice_keyword))))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Transform single-arg translate and multi-arg rotate
==================

<svg>
  <g transform="translate(10)"/>
  <g transform="rotate(45,50,50)"/>
  <g transform="translate(10, 20)"/>
  <g transform="scale(2, 3)"/>
</svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (transform_attribute
          name: (transform_attribute_name)
          value: (transform_attribute_value
            (transform_list
              (translate_transform
                (number)))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (transform_attribute
          name: (transform_attribute_name)
          value: (transform_attribute_value
            (transform_list
              (rotate_transform
                (number)
                (comma_wsp)
                (number)
                (comma_wsp)
                (number)))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (transform_attribute
          name: (transform_attribute_name)
          value: (transform_attribute_value
            (transform_list
              (translate_transform
                (number)
                (comma_wsp
                  (wsp))
                (number)))))))
    (text)
    (element
      (self_closing_tag
        name: (name)
        (transform_attribute
          name: (transform_attribute_name)
          value: (transform_attribute_value
            (transform_list
              (scale_transform
                (number)
                (comma_wsp
                  (wsp))
                (number)))))))
    (text)
    (end_tag
      name: (name)))
  (text))

==================
Paint inherit and context keywords
==================

<svg fill="inherit" stroke="currentColor" color="context-fill" flood-color="context-stroke"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value)))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value)))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value)))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value))))
    (end_tag
      name: (name)))
  (text))

==================
Paint hex colors
==================

<svg fill="#fff" stroke="#abcdef" flood-color="#ABC" lighting-color="#001122"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (hex_color))))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (hex_color))))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (hex_color))))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (hex_color)))))
    (end_tag
      name: (name)))
  (text))

==================
Paint url with fallback keywords
==================

<svg fill="url(#grad) none" stroke="url(#pat) currentColor"></svg>

---

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name)
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (paint_server
              (iri_reference)
              (wsp)))))
      (paint_attribute
        name: (paint_attribute_name)
        value: (paint_attribute_value
          (paint_value
            (paint_server
              (iri_reference)
              (wsp))))))
    (end_tag
      name: (name)))
  (text))

==================
Functional color variants rgba and hsla
==================

<svg fill="rgba(255,0,0,0.5)" stroke="hsla(120,100%,50%,0.8)"></svg>

---
